[gd_scene load_steps=7 format=2]

[ext_resource path="res://web/Web.gd" type="Script" id=1]
[ext_resource path="res://assets/web/newWeb.png" type="Texture" id=2]
[ext_resource path="res://assets/web/Ball.png" type="Texture" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 7.5, 116.5 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 7.5, 116.5 )

[node name="Web" type="RigidBody2D"]

input_pickable = false
collision_layer = 16
collision_mask = 16
mode = 0
mass = 250.0
friction = 1.0
bounce = 0.0
gravity_scale = 5.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = 0.1
angular_velocity = 0.0
angular_damp = 0.1
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Collision", "Linear", "Pickable", "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 4.76837e-07, 0 )
scale = Vector2( 0.3, 0.05 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Position2DTop" type="Position2D" parent="Sprite" index="0"]

position = Vector2( 0, -116.5 )
scale = Vector2( 1, 1.25 )
_sections_unfolded = [ "Transform" ]

[node name="WebArea" type="Area2D" parent="Sprite" index="1"]

scale = Vector2( 3, 2 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/WebArea" index="0"]

scale = Vector2( 0.3, 0.5 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Position2DBottom" type="Position2D" parent="Sprite" index="2"]

position = Vector2( 0, 116.5 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Sprite/Position2DBottom" index="0"]

texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

scale = Vector2( 0.3, 0.05 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="PinJoint2D" type="PinJoint2D" parent="." index="2"]

editor/display_folded = true
position = Vector2( 0, 5 )
scale = Vector2( 0.2, 0.2 )
node_a = NodePath("..")
node_b = NodePath("")
bias = 0.9
disable_collision = true
softness = 0.0
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="PinJoint2D" index="0"]

texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Polygon2D" type="Polygon2D" parent="." index="3"]

polygon = PoolVector2Array( -2.23828, -5.82513, -2.24318, 5.81927, 2.26383, 5.80886, 2.26458, -5.82305 )
uv = PoolVector2Array(  )
color = Color( 1, 1, 1, 0 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0


