[gd_scene load_steps=5 format=2]

[ext_resource path="res://web/Web.gd" type="Script" id=1]
[ext_resource path="res://assets/web/newWeb.png" type="Texture" id=2]
[ext_resource path="res://web/WebTipPosition.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 7.5, 116.6 )

[node name="Web" type="RigidBody2D"]

input_pickable = false
collision_layer = 0
collision_mask = 0
mode = 0
mass = 250.0
friction = 1.0
bounce = 0.0
gravity_scale = 5.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = 0.1
angular_velocity = 0.0
angular_damp = 0.1
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Collision", "Linear", "Pickable", "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 0.3, 0.8 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Position2D" parent="Sprite" index="0" instance=ExtResource( 3 )]

_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

scale = Vector2( 0.3, 0.8 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="PinJoint2D" type="PinJoint2D" parent="." index="2"]

position = Vector2( -0.0472565, 84.8039 )
node_a = NodePath("..")
node_b = NodePath("")
bias = 0.9
disable_collision = true
softness = 0.0
_sections_unfolded = [ "Transform" ]


